cmake_minimum_required(VERSION 3.2)
project(LppWeb_Compiler)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    archivotypenode.cpp
    archivotypenode.h
    arraytypenode.cpp
    arraytypenode.h
    arrayvariablenode.cpp
    arrayvariablenode.h
    boolnode.cpp
    boolnode.h
    cadenanode.cpp
    cadenanode.h
    cadenatypenode.cpp
    cadenatypenode.h
    caracternode.cpp
    caracternode.h
    casenode.cpp
    casenode.h
    declareheadernode.cpp
    declareheadernode.h
    declarevariablenode.cpp
    declarevariablenode.h
    divisionnode.cpp
    divisionnode.h
    enteronode.cpp
    enteronode.h
    equalnode.cpp
    equalnode.h
    exponentialnode.cpp
    exponentialnode.h
    expressionfunctionnode.cpp
    expressionfunctionnode.h
    expressiongroupnode.cpp
    expressiongroupnode.h
    expressionnode.cpp
    expressionnode.h
    functionnode.cpp
    functionnode.h
    greaterandequalthannode.cpp
    greaterandequalthannode.h
    greaterthannode.cpp
    greaterthannode.h
    htmlnode.cpp
    htmlnode.h
    idnode.cpp
    idnode.h
    integerdivisionnode.cpp
    integerdivisionnode.h
    lessandequalthannode.cpp
    lessandequalthannode.h
    lessthannode.cpp
    lessthannode.h
    lexer.cpp
    lexer.h
    lexicalexception.cpp
    lexicalexception.h
    literalnode.cpp
    literalnode.h
    logicalnotnode.cpp
    logicalnotnode.h
    logicalonode.cpp
    logicalonode.h
    logicalynode.cpp
    logicalynode.h
    lppprogram.cpp
    lppprogram.h
    modnode.cpp
    modnode.h
    multiplicationnode.cpp
    multiplicationnode.h
    negativenumbernode.cpp
    negativenumbernode.h
    notequalnode.cpp
    notequalnode.h
    parameternode.cpp
    parameternode.h
    parser.cpp
    parser.h
    parserexception.cpp
    parserexception.h
    procedurenode.cpp
    procedurenode.h
    programcodenode.cpp
    programcodenode.h
    programheadernode.cpp
    programheadernode.h
    realnode.cpp
    realnode.h
    registerstructurenode.cpp
    registerstructurenode.h
    registervariablenode.cpp
    registervariablenode.h
    simpetypenode.cpp
    simpetypenode.h
    simplevariablenode.cpp
    simplevariablenode.h
    statementabrirarchivonode.cpp
    statementabrirarchivonode.h
    statementassignmentnode.cpp
    statementassignmentnode.h
    statementcasonode.cpp
    statementcasonode.h
    statementcerrararchivonode.cpp
    statementcerrararchivonode.h
    statementescribanode.cpp
    statementescribanode.h
    statementescribirarchivonode.cpp
    statementescribirarchivonode.h
    statementleerarchivonode.cpp
    statementleerarchivoNode.h
    statementllamarnode.cpp
    statementllamarnode.h
    statementmientrasnode.cpp
    statementmientrasnode.h
    statementnode.cpp
    statementnode.h
    statementparanode.cpp
    statementparanode.h
    statementrepitanode.cpp
    statementrepitanode.h
    statementreturnnode.cpp
    statementreturnnode.h
    statementsinode.cpp
    statementsinode.h
    stdafx.cpp
    stdafx.h
    structurenode.cpp
    structurenode.h
    subtractionnode.cpp
    subtractionnode.h
    sumnode.cpp
    sumnode.h
    targetver.h
    token.cpp
    token.h
    typeheadernode.cpp
    typeheadernode.h
    typenode.cpp
    typenode.h
    typestructurenode.cpp
    typestructurenode.h
    variablenode.cpp
    variablenode.h)

add_executable(LppWeb_Compiler ${SOURCE_FILES})